Add filter for /movies.
